# Arbitrage-Bot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  cloud.txt  coud deployment commands.txt  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_marketplace_integrations.py  0003_pricing_engine.py  0004_fulfillment.py  0005_alerts.py  0006_order_items.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  logging.py  redis.py  security.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_alert_generation.py  test_alerts_api.py  test_alerts_service.py  test_auth.py  test_dashboard_summary.py  test_fulfillment_adapter.py  test_fulfillment_api.py  test_fulfillment_killswitch.py  test_fulfillment_multiqty.py  test_fulfillment_service.py  test_fulfillment_webhook.py  test_health.py  test_integrations.py  test_inventory_parser.py  test_inventory_service.py  test_live_fulfillment_adapters.py  test_logs.py  test_marketplaces_api.py  test_order_intake.py  test_order_poll_worker.py  test_pricing_api.py  test_pricing_autosync_listings.py  test_pricing_costs.py  test_pricing_engine.py  test_pricing_no_compounding.py  test_pricing_service.py  test_pricing_stock_sync.py  test_products_api.py  test_sourcing_service.py  test_static_serving.py  test_system_api.py  test_users_api.py  test_wallet_service.py
(+129 files in other folders)
